Modifying travis.yml doc

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ after_success:
   - docker build -t rgomezrx/multi-nginx ./nginx
   - docker build -t rgomezrx/multi-server ./server
   - docker build -t rgomezrx/multi-worker ./worker
-  # Authenticate with docker CLI
+  # Authenticate with docker CLI to be able to push images
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
   # Push these images into DockerHub
   - docker push rgomezrx/multi-client
