--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses actions/checkout@v3
+      - uses: actions/checkout@v3
       # build and testing for react client
       - run: docker build -t rgomezrx/react-test -f ./client/Dockerfile.dev ./client
       - run: docker run -e CI=true rgomezrx/react-test npm test
