--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
       - run: docker build -t rgomezrx/multi-server ./server
       - run: docker build -t rgomezrx/multi-worker ./worker
 
-      - run: docker login -u ${{ secrets.DOCKER_ID }} -p ${{ secrets.DOCKER_PASSWORD }}
+      - run: echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{ secrets.DOCKER_ID }} --password-stdin
 
       - run: docker push rgomezrx/multi-client
       - run: docker push rgomezrx/multi-nginx
